# sential.ai

./: # SentinelAI.md  .gitignore  README.md  Rate limits by model.txt  ai_analyzer.py  chat_engine.py  ci_reporter.py  compliance_profiles.py  context_builder.py  get_models.py  history_tracker.py  install.ps1  key_manager.py  main.py  patch_generator.py  pyproject.toml  rag_builder.py  repo_resolver.py  report_exporter.py  requirements.txt  sbom_generator.py  sentinelai.bat  server.py  tui.py
.github/workflows/: sentinel-audit.yml
frontend/: index.html
frontend/from_stitch/sentinel_tactical_interface/: DESIGN.md
frontend/from_stitch/sentinelai_home/: code.html
frontend/from_stitch/sentinelai_mission_control/: code.html
frontend/from_stitch/sentinelai_settings/: code.html
scanners/: __init__.py  gitleaks.py
templates/: report_style.css
