[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sentinelai"
version = "2.0.0"
description = "AI-powered security auditing for modern codebases"
readme = "# SentinelAI.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SentinelAI Team"}
]
keywords = ["security", "audit", "AI", "vulnerability", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
sentinelai = "main:app"
